--- a/tasks/setup-slave-replication-gtid.yml
+++ b/tasks/setup-slave-replication-gtid.yml
@@ -65,14 +65,14 @@
 
 - name: setup slave replication gtid | stop slave
   community.mysql.mysql_replication:
-    mode: stopslave
+    mode: stopreplica
   when: inventory_hostname in percona_server_tools_setup_slave_replication_gtid.inventory.slaves
   tags:
     - percona-server-tools-setup-slave-replication-gtid-stop-slave
 
 - name: setup slave replication gtid | reset slave
   community.mysql.mysql_replication:
-    mode: resetslaveall
+    mode: resetreplicaall
   when: inventory_hostname in percona_server_tools_setup_slave_replication_gtid.inventory.slaves
   tags:
     - percona-server-tools-setup-slave-replication-gtid-reset-slave
@@ -169,6 +169,7 @@
     mysql
     -e "RESET MASTER;"
     --skip-column-names
+  changed_when: true
   when:
     - inventory_hostname in percona_server_tools_setup_slave_replication_gtid.inventory.slaves
     - _master_log_information.stdout.split() | length > 2
@@ -180,6 +181,7 @@
     mysql
     -e "SET GLOBAL gtid_purged='{{ _master_log_information.stdout.split()[2] }}';"
     --skip-column-names
+  changed_when: true
   register: _set_gtid_purged
   when:
     - inventory_hostname in percona_server_tools_setup_slave_replication_gtid.inventory.slaves
@@ -189,7 +191,7 @@
 
 - name: setup slave replication gtid | change master
   community.mysql.mysql_replication:
-    mode: changemaster
+    mode: changeprimary
     master_host: "{{ percona_server_tools_setup_slave_replication_gtid.master.host }}"
     master_user: "{{ percona_server_tools_setup_slave_replication_gtid.master.user }}"
     master_password: "{{ percona_server_tools_setup_slave_replication_gtid.master.password }}"
@@ -200,14 +202,14 @@
 
 - name: setup slave replication gtid | start slave
   community.mysql.mysql_replication:
-    mode: startslave
+    mode: startreplica
   when: inventory_hostname in percona_server_tools_setup_slave_replication_gtid.inventory.slaves
   tags:
     - percona-server-tools-setup-slave-replication-gtid-start-slave
 
 - name: setup slave replication gtid | get slave
   community.mysql.mysql_replication:
-    mode: getslave
+    mode: getreplica
   register: _slave_information
   when: inventory_hostname in percona_server_tools_setup_slave_replication_gtid.inventory.slaves
   failed_when: _slave_information.Slave_IO_Running != 'Yes' or _slave_information.Slave_SQL_Running != 'Yes'
