--- a/tasks/reset-root-password-ge-57.yml
+++ b/tasks/reset-root-password-ge-57.yml
@@ -15,7 +15,7 @@
       FLUSH PRIVILEGES;
     owner: root
     group: "{{ percona_server_tools_mysqld_user }}"
-    mode: 0640
+    mode: '0640'
     force: true
   tags:
     - percona-server-tools-reset-root-password-ge-57-init-file-create
